# plants

./: .gitignore  Dockerfile  Makefile  README.md  manage.py  pyproject.toml  requirements.txt
app/: settings.py  urls.py
plants/: admin.py  forms.py  models.py  storages.py  urls.py  views.py
plants/migrations/: 0001_initial.py  0002_auto_20210109_1739.py  0003_auto_20210109_2136.py
plants/templates/plants/: _plant_card.html  _plant_card_small.html  _plant_fill_me_in.html  all.html  create.html  detail.html  index.html  layout.html  list.html  search_results.html  update.html
static/css/: style.css
static/js/: script.js
templates/: layout.html
templates/registration/: login.html
