[tool.poetry]
name = "django-plants"
version = "0.1.0"
description = ""
authors = ["Ivan Elfimov <ielfimov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.4"
django-storages = "^1.11.1"
django-yearlessdate = "^1.3.1"
boto3 = "^1.16.47"
django-environ = "^0.4.5"
psycopg2-binary = "^2.8.6"
pillow = "^8.1.0"
whitenoise = "^5.2.0"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.7.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
